<resources>
    <string name="app_name">Neptune Client</string>

    <!-- Main Activity -->
    <string name="add_new_device">Add new device</string>
    <string name="menu_pair_text">Pair with a server</string>
    <string name="menu_rename_client_text">Rename client</string>
    <string name="menu_about_neptune_text">About Neptune</string>
    <string name="main_activity_device_ip">Device IP: %s</string>
    <string name="main_activity_friendly_name">Device name: %s</string>
    <string name="main_activity_version">Version: %s</string>

    <!-- Server entry (main activity) -->
    <string name="server_item_line_delete_button_text">Delete and unpair server</string>
    <string name="server_item_line_name_placeholder">Name</string>
    <string name="server_item_line_sync_button_text">Sync with server</string>


    <!-- Permissions Screen Strings -->
    <string name="notification_permission_title">Notification Access Required</string>
    <string name="notification_permission_description">
        This app requires access to your notifications in order to function properly.
        To grant access, please enable the notification access permission for this app in the settings.
    </string>
    <string name="open_settings">Open Settings</string>

    <string name="instructionsExplanation">The following shows a list of instructions to follow to enable the reading of notifications.</string>
    <string name="notification_permission_step1">1. Open the Settings App</string>
    <string name="notification_permission_step2">2. Search for "special app access"</string>
    <string name="notification_permission_step3">3. Click "device &amp; app notifications"</string>
    <string name="notification_permission_step4">4. Click &quot;Neptune Client&quot;</string>
    <string name="notification_permission_step5">5. Enable the &quot;Allow notification access&quot; switch.</string>
    <string name="notification_permission_step6">6. After enabling the setting, restart Neptune Client.</string>


    <!-- Server settings -->
    <string name="title_activity_server_settings">Server Settings</string>
    <string name="title_activity_server_settings_placeholder">%s settings</string>
    <!-- Setting buttons -->
    <string name="send_file">Send File</string>
    <string name="receive_clipboard">Receive Clipboard</string>
    <string name="send_clipboard">Send Clipboard</string>

    <string name="menu_server_settings_save">Save</string>
    <string name="menu_server_settings_delete">Delete</string>

    <string name="connection_settings">Connection Settings</string>
    <string name="server_ip_address_title_placeholder">Server\'s IP address: %s</string>
    <string name="server_websocket_status_title_placeholder">Websocket status: %s</string>
    <string name="server_websocket_status_connected">connected</string>
    <string name="server_websocket_status_disconnected">disconnected</string>
    <string name="server_ping_delay_title_placeholder">Last ping delay (ms): %s</string>
    <string name="server_settings_sync">Sync with server</string>


    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="clipboard_header">Clipboard</string>
    <string name="filesharing_header">File sharing</string>


    <!-- Notifications -->
    <string name="notifications_sync_title">Sync notifications</string>
    <string name="notifications_selected_apps_title">Manage synced applications</string>

    <!-- Clipboard Preferences -->
    <string name="clipboard_enable_title">Enable clipboard sharing</string>
    <string name="clipboard_server_get_title">Allow server to request clipboard data</string>
    <string name="clipboard_server_get_summary_on">Server can request a copy of this device\'s clipboard</string>
    <string name="clipboard_server_get_summary_off">Server only receives clipboard data when we send it</string>

    <!-- File sharing Preferences -->
    <string name="filesharing_enable_title">Enable file sharing</string>
    <string name="filesharing_server_set_title">Receive files from server</string>
    <string name="filesharing_server_set_summary_on">Server can upload files to this device</string>
    <string name="filesharing_server_set_summary_off">Server cannot upload files to this device</string>

    <string name="filesharing_notify_on_receive_title">Notify on incoming file</string>

    <string name="filesharing_auto_accept_files_title">Automatically accept incoming files</string>
    <string name="filesharing_auto_accept_files_summary_on">Incoming files are automatically saved</string>
    <string name="filesharing_auto_accept_files_summary_off">Incoming files must be accepted before downloading</string>

    <string name="filesharing_destination_folder_title">Set incoming files destination</string>
    <string name="filesharing_destination_folder_location_placeholder">Current destination: %s</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>