<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#FFFFFF"
    tools:context=".ServerSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/title_activity_server_settings"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/serverTopButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btnSendFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/send_file"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSendClipboard"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:enabled="false"
                    android:text="@string/send_clipboard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnReceiveClipboard"
                    app:layout_constraintHorizontal_weight="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSendFile"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btnReceiveClipboard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:enabled="false"
                    android:text="@string/receive_clipboard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1.0"
                    app:layout_constraintStart_toEndOf="@+id/btnSendClipboard"
                    app:layout_constraintTop_toBottomOf="@+id/btnSendFile"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/topButtonsNotificationsDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/syncNotificationLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serverTopButtons" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/syncNotificationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serverTopButtons">

                <CheckBox
                    android:id="@+id/server_sync_notifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_sync_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/server_manage_app_notifications"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="?attr/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notifications_selected_apps_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_sync_notifications" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/notificationsClipboardDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/clipboardSettingsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/syncNotificationLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clipboardSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/syncNotificationLayout">

                <CheckBox
                    android:id="@+id/clipboard_enable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/clipboard_enable_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/clipboardRightTab"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clipboard_enable" />

                <CheckBox
                    android:id="@+id/clipboard_server_get"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="true"
                    android:text="@string/clipboard_server_get_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/clipboardRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/clipboard_enable" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/clipboardFilesharingDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/filesharingSettingsLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clipboardSettingsLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filesharingSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clipboardSettingsLayout">

                <CheckBox
                    android:id="@+id/filesharing_enable_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/filesharing_enable_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/filesharingRightTab"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filesharing_enable_title" />

                <CheckBox
                    android:id="@+id/filesharing_auto_accept_files"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_auto_accept_files_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_enable_title" />

                <CheckBox
                    android:id="@+id/filesharing_notify_on_receive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_notify_on_receive_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_auto_accept_files" />

                <CheckBox
                    android:id="@+id/filesharing_server_set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_server_set_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_notify_on_receive" />

                <Button
                    android:id="@+id/filesharing_destination_folder_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/filesharing_destination_folder_title"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_server_set" />

                <TextView
                    android:id="@+id/filesharing_destination_folder_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_destination_folder_location_placeholder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@id/filesharing_destination_folder_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/filesharingDeviceInfoDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/deviceInfoLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filesharingSettingsLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deviceInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filesharingSettingsLayout">

                <TextView
                    android:id="@+id/server_ipaddress_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/server_ip_address_title_placeholder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/server_websocket_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/server_websocket_status_title_placeholder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_ipaddress_title" />

                <TextView
                    android:id="@+id/server_ping_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/server_ping_delay_title_placeholder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_websocket_title" />

                <Button
                    android:id="@+id/server_settings_sync"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/server_settings_sync"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/server_ping_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/server_settings_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/menu_server_settings_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/server_settings_delete"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/menu_server_settings_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/server_settings_save"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>